# Perturbation-Models-Outperform-Baselines

./: .cursorignore  .gitignore  LICENSE  README.md  pyproject.toml
analyses/calibration/: README.md  calibration_analysis.py  run_all_dataset_baselines.sh
analyses/metric_problems/: cell_titration.py  control_bias.py  deg_coherence.py  deg_exploration.py  effect_sparsity.py  expression_effect.py  paper_plots.py  signal_dilution.py  sparsity_visualization.py
analyses/perturbation_strength/: README.md  perturbation_strenght.py
analyses/plotting/: ENCODE_and_ChEA_Consensus_TFs_from_ChIP-X.txt  README.md  cellsimbench_figs_R.rmd  compute_replogle_mse.py  create_gsea_files.py
cellsimbench/: cli.py
cellsimbench/core/: __init__.py  baseline_runner.py  benchmark.py  data_manager.py  deg_quantile_analyzer.py  docker_runner.py  gpu_utils.py  metrics_engine.py  plotting_engine.py  variance_analyzer.py
cellsimbench/models/: builtin_models.py
cellsimbench/utils/: hash_utils.py  utils.py
data/: .gitignore  add_ground_truth_degs.py  add_interpolated_baseline.py  analyze_deg_reproducibility.py  batch_transfer_embeddings.py  calculate_sparse_mean_baselines.py  get_dataset_stats.py  run_all_get_data.py
data/adamson16/: get_data.py
data/frangieh21/: get_data.py
data/gene_embeddings/: gather_embeddings.sh  generate_esm2_gene_embeddings.py  generate_geneformer_gene_embeddings.py  generate_genept_gene_embeddings.py  generate_presage_embeddings.py  (+2 more)
scripts/: .gitignore  deg_exploration.py  plot_multimodel_summary.py  pull_all_datasets.sh  pull_all_models.sh
(+118 files in other folders)
