[project]
name = "cellsimbench"
version = "0.1.0"
description = "CellSimBench: A comprehensive benchmarking framework for perturbation response models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastcluster>=1.2.6",
    "igraph>=0.11.8",
    "ipdb>=0.13.13",
    "ipython>=5.2.0",
    "leidenalg>=0.10.2",
    "nbconvert>=7.16.6",
    "scanpy>=1.11.1",
    "scienceplots>=2.1.1",
    "scipy (==1.14.1)",
    "seaborn>=0.13.2",
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (==2.2.0)",
    "pandas (==2.2.2)",
    "tqdm==4.66.5",
    "jupytext>=1.17.1",
    # CellSimBench specific dependencies
    "hydra-core>=1.3.0",
    "docker>=7.0.0",
    "omegaconf>=2.3.0",
    "matplotlib>=3.5.0",
    "pytest>=7.0.0",
    "upsetplot>=0.9.0",
    "openai>=1.99.9",
    "pybiomart>=0.2.0",
    "requests>=2.32.3",
    "mkdocs>=1.6.1",
    "pymdown-extensions>=10.16.1",
    "mkdocs-material>=9.6.17",
    "mkdocstrings-python>=1.17.0",
    "nvitop>=1.5.3",
    "scperturb>=0.1.0",
]


[project.scripts]
cellsimbench = "cellsimbench.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cellsimbench*"]

[tool.setuptools.package-data]
cellsimbench = ["configs/*.yaml", "configs/**/*.yaml"]
